# pc-tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  初始化指南.md  运行指令
scripts/: prefetch-nsis.ps1
src/: App.tsx  App.vue  index.css  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/hardware/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs
src-tauri/src/system_info/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: Button.svelte  Card.svelte  Icon.svelte  Progress.svelte  Table.svelte  Tag.svelte  Toasts.svelte  circular-progress.tsx  descriptions.tsx  page-header.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  progress.tsx  radio-group.tsx  select.tsx  slider.tsx  switch.tsx  table.tsx
src/hooks/: use-interval.ts
src/lib/: tauri.ts  utils.ts
src/pages/: Benchmark.tsx  CPUInfo.tsx  Clean.tsx  DiskInfo.tsx  Driver.tsx  Fan.tsx  GPUInfo.tsx  MemoryInfo.tsx  MotherboardInfo.tsx  Network.tsx  Overview.tsx  Settings.tsx  Startup.tsx  Temperature.tsx  Usage.tsx
src/router/: index.ts
src/utils/: message.ts
src/views/: Benchmark.vue  CPUInfo.vue  Clean.vue  DiskInfo.vue  Driver.vue  Fan.vue  GPUInfo.vue  MemoryInfo.vue  MotherboardInfo.vue  Network.vue  Overview.vue  Settings.vue  Startup.vue  Temperature.vue  Usage.vue
