[package]
name = "pc-tools"
version = "0.0.1"
description = "查机工具箱 - 基于 Tauri 的系统工具集"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "os-all", "dialog-all", "path-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
wmi = "0.12"
chrono = "0.4"
nvml-wrapper = "0.10"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Com",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
admin-manifest = []
